overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2  # Higher replicas for production
  template:
    spec:
      containers:
        - name: nginx
          image: tejirih/static-site:latest
